# MAVISp

./: .gitignore  .osfcli.config  CHANGELOG.md  CURATORS.md  MANIFEST.in  README.md  Welcome.py  app.py  dot_plot.py  dot_plot_v2.py  lolliplot.py  mavisp_target_list.txt  pyproject.toml  streamlit_utils.py
database/: index.csv
database/BCL2L1/basic_mode/: curators.yalm
database/BLM/simple_mode/: metadata.yaml
database/MAP1LC3B/: info.txt
database/MLH1/simple_mode/: metadata.yaml
database/PPIA/basic_mode/: metadata.yaml
database/TRAP1/basic_mode/: metadata.yaml
database/ULK1/basic_mode/: metadata.yaml
database/dataset_tables/: ARID3A-simple_mode.csv  BCL2-simple_mode.csv  BCL2L1-simple_mode.csv  BLM-simple_mode.csv  KRAS-simple_mode.csv  MAP1LC3B-simple_mode.csv  MLH1-simple_mode.csv  PPIA-simple_mode.csv  TRAP1-simple_mode.csv  ULK1-simple_mode.csv
mavisp/: core.py  data.py  error.py  ingest.py  mavisp.py  methods.py  modes.py  modules.py  utils.py
mavisp/data/: clinvar_interpretation_internal_dictionary.txt  phosphoSLiMs_09062023.csv  phosphoSLiMs_15062023.csv
pages/: 1_MAVISp_simple_mode.py  1_Main_Database.py  1_News.py  2_Events.py  2_MAVISp_ensemble_mode.py  3_Acknowledgements_and_data_usage.py  3_MAVISp_simple_mode.py  4_Documentation.py  4_MAVISp_ensemble_mode.py  5_Datasets_and_metadata.py  5_Help.py  6_Acknowledgements_and_data_usage.py  6_Downloads.py  7_Acknowledgements_and_data_usage.py  7_Documentation.py  8_Documentation.py  8_Help.py
test_data/: README.md
test_data/BLM_new_clinvar/simple_mode/: summary.txt
test_data/mavisp_web_server/: dataset_info.csv
test_data/test_output/: dataset_info.csv
test_out/: index.csv
test_out/dataset_tables/: ARID3A-ensemble_mode.csv  ARID3A-simple_mode.csv  BLM-simple_mode.csv  BLM_new_clinvar-simple_mode.csv  BLM_new_clinvar-simple_mode.csv.save
test_output/: dataset_info.csv
test_output/Foldetta_simple/: dataset_info.csv
test_output/Foldetta_simple_ensemble/: dataset_info.csv
test_output/ThermoMPNN_test/: dataset_info.csv
(+523 files in other folders)
