[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mavisp"
description = "The MAVISp web app"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL 3"}
dependencies = [
    "tabulate",
    "pandas",
    "matplotlib",
    "numpy",
    "streamlit",
    "streamlit-aggrid",
    "pyyaml",
    "requests",
    "termcolor",
    "setuptools",
    'importlib-metadata; python_version>"3.6"',
]
dynamic = ["version"]

[tool.setuptools]
packages = ["mavisp"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "mavisp.VERSION"}

[project.scripts]
mavisp = "mavisp.mavisp:main"

