[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mavisp"
description = "The MAVISp web app"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL 3"}
dependencies = [
    "argcomplete",
    "tabulate",
    "pandas",
    "matplotlib",
    "numpy",
    "streamlit",
    "ipython_genutils",
    "stmol",
    "py3Dmol",
    "pyyaml",
    "requests",
    "termcolor",
    "setuptools",
    'importlib-metadata; python_version>"3.9"',
]
dynamic = ["version"]

[tool.setuptools]
packages = ["mavisp"]
include-package-data = true

[project.scripts]
mavisp = "mavisp.mavisp:main"

